syntax = "proto3";

option java_package = "com.test.proto";
option java_outer_classname = "AddressBookModel";

import "Person.proto";

message AddressBook {
    repeated Person person = 1;
}